--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Form Biglietto treno</title>
   </head>
   <body>
+    <!-- Input Name -->
+    <label for="name">Enter your name</label>
+    <input type="text" id="name" placeholder="Name Surname" />
+
     <!-- Input KM -->
     <label for="km">Km to travel</label>
     <input id="km" type="number" />
@@ -18,6 +22,14 @@
       <option value="minor">Under 18</option>
       <option value="senior">Over 65</option>
     </select>
+
+    <!-- Submit Button -->
+    <button id="submit" type="submit">Calculate</button>
+
+    <!-- Generated Ticket -->
+    <div class="ticket"></div>
+
+    <!-- JS Link -->
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
