add dom outputs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
     <button id="submit" type="submit">Calculate</button>
 
     <!-- Generated Ticket -->
-    <div class="ticket"></div>
+    <div class="ticket">
+      <h1>Your Ticket</h1>
+      <div id="user-name"></div>
+
+      <div id="ticket-type"></div>
+
+      <div id="final-price"></div>
+    </div>
 
     <!-- JS Link -->
     <script src="./assets/js/script.js"></script>
