add html ticket result

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="ticket-details col-8">
             <div class="discount-ticket col-3">
                 <h3>Ticket Type</h3>
-              <h4 id="ticket-type">Standard Ticket</h4>
+              <h4 id="ticket-type">None</h4>
             </div>
 
             <div class="carriage col-3">
