fix age selection

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </div>
 
         <!-- Form -->
+
         <div class="form">
           <!-- Input Name -->
           <div class="col-4">
@@ -43,6 +44,7 @@
             <div class="input-age">
               <label for="age">Select your age</label>
               <select name="age" id="age">
+                <option value="" disabled selected>Select your age</option>
                 <option value="adult">Adult</option>
                 <option value="minor">Under 18</option>
                 <option value="senior">Over 65</option>
@@ -57,6 +59,7 @@
             </div>
           </div>
         </div>
+
 
         <!-- Generated Ticket -->
         <h1 class="your-ticket">Your Ticket</h1>
