add show-on-click ticket

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- Generated Ticket -->
         <h1 class="your-ticket">Your Ticket</h1>
 
-        <div class="ticket">
+        <div id="generated-ticket" class="d-none ticket">
           <div class="user-name col-4">
             <h2>Customer Name:</h3>
             <h3 id="customer-name">None</h3>
