add reset button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <!-- Form -->
 
-        <div class="form">
+        <form>
           <!-- Input Name -->
           <div class="col-4">
             <div class="input-user-name">
@@ -52,13 +52,14 @@
             </div>
           </div>
 
-          <!-- Submit Button -->
+          <!-- Submit Reset Button -->
           <div class="col-12">
             <div class="submit-btn">
               <button id="submit" type="submit">Calculate</button>
+              <input id="reset" type="reset" value="Reset">
             </div>
           </div>
-        </div>
+        </form>
 
 
         <!-- Generated Ticket -->
